force-app/main/default/objects/Clima__c/fields/Aeropuerto__c.field-meta.xml
<CustomField>
    <fullName>Aeropuerto__c</fullName>
    <description>Clima asociado al aeropuerto</description>
    <label>Aeropuerto</label>
    <referenceTo>Aeropuerto__c</referenceTo>
    <relationshipLabel>Climas</relationshipLabel>
    <relationshipName>Climas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>