force-app/main/default/objects/Clima__c/fields/Fecha_y_Hora_de_predicci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_y_Hora_de_predicci_n__c</fullName>
    <description>la fecha y hora en la que se reporta el clima del aeropuerto</description>
    <label>Fecha y Hora de predicción</label>
    <type>DateTime</type>
</CustomField>